--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["fontsource", "openweathermap", "roboto"]
+  "cSpell.words": ["bgimage", "fontsource", "openweathermap", "roboto"]
 }
