--- a/apps/open-weather-api/package.json
+++ b/apps/open-weather-api/package.json
@@ -13,6 +13,7 @@
     "shared-types": "*",
     "tsconfig": "*",
     "typescript": "^4.8.3",
+    "workers-common": "*",
     "wrangler": "^2.0.29"
   }
 }
